# Pitch-Class-Router

./: CLAUDE.md  README.md  index.html  pitch-class-router.js
.claude/commands/: plugin-release.md  plugin-verify.md
Installer/Windows/: PitchClassRouter-Installer.iss
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/scripts/: create-installer-linux.sh  create-installer.sh  fix-moduleinfo.py
scripts/: fix-moduleinfo.py  verify-build.sh
